--- a/0x02-react_intro/task_2/dashboard/src/Notifications.css
+++ b/0x02-react_intro/task_2/dashboard/src/Notifications.css
@@ -3,6 +3,24 @@
 }
 
 .Notifications {
-  border: 3px solid var(--main-color);
-  padding: 50px;
+  border: 3px dashed var(--main-color);
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.Notifications button img {
+  width: 10px;
+}
+
+.Notifications p {
+  margin: 0;
+  margin-top: 15px;
+}
+
+[data-priority="default"] {
+  color: blue;
+}
+
+[data-priority="urgent"] {
+  color: red;
 }
